@@ -18,24 +18,24 @@ CSRC := \
 	$(DIR)/sys-statfs.c
 
 SMSRC := \
-	getattr-pcache.sm \
+	msgpairarray.sm \
 	msgpair.sm \
+	getattr-pcache.sm \
+	lookup-dcache.sm \
 	sys-getattr.sm \
 	sys-setattr.sm \
         sys-lookup.sm \
 	sys-truncate.sm \
-	lookup-dcache.sm \
-	msgpairarray.sm \
 	sys-io.sm \
-	mgmt-noop.sm \
 	sys-create.sm \
 	sys-mkdir.sm \
 	sys-remove.sm \
-	mgmt-setparam-list.sm \
-	mgmt-statfs-list.sm \
 	sys-flush.sm \
 	sys-symlink.sm \
 	sys-readdir.sm \
+	mgmt-noop.sm \
+	mgmt-setparam-list.sm \
+	mgmt-statfs-list.sm \
 	mgmt-perf-mon-list.sm \
 	mgmt-event-mon-list.sm \
 	mgmt-iterate-handles-list.sm \
